--- a/16.04/amd64/Dockerfile
+++ b/16.04/amd64/Dockerfile
@@ -7,7 +7,7 @@ RUN exec 2>&1 \
  && for tarfile in ${TARFILES}; do tar x -pf "$tarfile"; done \
  && rm -f ${TARFILES} \
  && curl "https://keyserver.ubuntu.com/pks/lookup?op=get&search=0xa1715d88e1df1f24" | gpg --import \
- && gpg --no-default-keyring --export --armor a1715d88e1df1f24 > /tmp/etc/apt/trusted.gpg.d/git.gpg \
+ && gpg --no-default-keyring --export --armor a1715d88e1df1f24 > /tmp/etc/apt/trusted.gpg.d/git.asc \
  && echo "deb http://ppa.launchpad.net/git-core/ppa/ubuntu xenial main" >> /tmp/etc/apt/sources.list
 
 FROM scratch
