--- a/16.04/amd64/Dockerfile
+++ b/16.04/amd64/Dockerfile
@@ -1,4 +1,4 @@
-FROM huggla/busybox:20190716 as busybox
+FROM huggla/alpine as alpine
 ARG TARFILES="rootfs.tar etc-apt.tar"
 COPY ./*.tar /tmp/
 RUN exec 2>&1 \
@@ -6,7 +6,8 @@ RUN exec 2>&1 \
  && cd /tmp \
  && for tarfile in ${TARFILES}; do tar x -pf "$tarfile"; done \
  && rm -f ${TARFILES} \
- && curl "https://keyserver.ubuntu.com/pks/lookup?op=get&search=0xa1715d88e1df1f24" | gpg --import \
+ && apk --no-cache add gnupg \
+ && wget -O - "https://keyserver.ubuntu.com/pks/lookup?op=get&search=0xa1715d88e1df1f24" | gpg --import \
  && gpg --no-default-keyring --export --armor a1715d88e1df1f24 > /tmp/etc/apt/trusted.gpg.d/git.asc \
  && echo "deb http://ppa.launchpad.net/git-core/ppa/ubuntu xenial main" >> /tmp/etc/apt/sources.list
 
